[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Interactables/Chest-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Interactables/ChestShadow.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Interactables/Chest.gd" type="Script" id=3]
[ext_resource path="res://Shaders/WhiteOutlineShader.tres" type="Material" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.5
height = 12.0

[sub_resource type="CapsuleShape2D" id=2]
height = 6.0

[sub_resource type="Animation" id=4]
resource_name = "Close"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Chest" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 3 )

[node name="ChestSprite" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( 1, -8 )
texture = ExtResource( 1 )
hframes = 3

[node name="ChestShadow" type="Sprite" parent="."]
position = Vector2( 1, -8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -2.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 0.5, -7 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="ItemSpawnPosition" type="Position2D" parent="."]
position = Vector2( 0.5, -9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 4 )
anims/Open = SubResource( 3 )
